--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -14,14 +14,14 @@ section {
 
 
 
-@media (max-width: 730px) {
+@media (max-width: 768px) {
     section {
         max-width: 55rem;
     }
 }
 
 
-@media (min-width: 730px) {
+@media (min-width: 768px) {
     section {
         max-width: 80rem;
     }
@@ -75,7 +75,7 @@ section {
 }
 
 
-@media (min-width: 730px) {
+@media (min-width: 768px) {
     .projects {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -121,11 +121,69 @@ section {
 
     .projects picture {
         min-height: 50rem;
+        display: flex;
+        align-items: center;
     }
 
     .projects .container {
         min-height: 50rem;
     }
+
+    .text {
+        max-width: 50ch;
+    }
 }
 
 
+/* 
+
+    ===== Images idea =====
+
+*/
+
+
+
+/* Background color for each project */
+
+
+@media (min-width: 768px) and (max-width: 1280px) {
+    .projects picture {
+        height: 90%;
+        background-color: #3b4664;
+        display: flex;
+        align-items: center;
+    }
+}
+
+
+
+
+@media (min-width: 1280px) {
+
+    .projects picture img {
+        border: none;
+    }
+
+    .projects #Calculator {
+        background-color: #3b4664;
+    }
+}
+
+
+
+/* 
+
+    ===== Text idea =====
+
+*/
+
+
+@media (min-width: 768px) and (max-width: 1280px) {
+    .text {
+        display: -webkit-box;
+        max-width: 336px;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+}
