--- a/src/App.css
+++ b/src/App.css
@@ -538,6 +538,14 @@ header {
     width: 50%;
 }
 
+
+@media (max-width: 425px) {
+    .RS-contact .title {
+        font-size: 3rem;
+    }
+}
+
+
 @media (min-width: 730px) {
     .RS-contact {
         display: flex;
@@ -587,15 +595,18 @@ header {
     ==============================
 */ 
 
-
-
 .P-more {
     min-height: 15rem;
     display: grid;
-    grid-template-columns: 1fr 1px 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     border-top: 1px solid #979797;
     border-bottom: 1px solid #979797;
+}
+
+.P-more a {
+    text-decoration: none;
+    color: var(--PC-black)
 }
 
 
@@ -609,47 +620,103 @@ header {
 }
 
 
-.P-more a {
-    text-decoration: none;
-    color: var(--PC-black)
-}
-
-
-.P-more .previous {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    align-self: center;
-    min-height: 15rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 1rem;
-}
-
-
+.P-more .previous,
+.P-more .previous span,
 .P-more .middleLine {
-    background-color: #979797;
-    min-height: 15rem;
-    grid-column: 2 / 3;
+    display: none;
 }
 
 
 .P-more .next {
-    grid-column: 3 / 5;
-    grid-row: 1 / 2;
     align-self: center;
-    text-align: right;
+    text-align: left;
     min-height: 15rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 30px;
+    grid-template-rows: 1fr 1fr;
+    justify-content: start;
+    align-items: flex-start;
+}
+
+
+.P-more .next svg {
+    display: grid;
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    align-self: center;
 }
 
 
 
+.P-more .next .subtitle,
+.P-more .next span {
+    grid-column: 1 / 2;
+}
+
+
+@media (max-width: 730px) {
+    .P-more .next .subtitle {
+        grid-row: 1 / 2;
+        align-self: end;
+        display: -webkit-box;
+        max-width: 100%;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+    
+    .P-more .next span {
+        grid-row: 2 / 3;
+        align-self: start;
+    }
+}
+
+
 @media (min-width: 730px) {
+
+    .P-more {
+        grid-template-columns: 1fr 1px 1fr;
+    }
+
+    .P-more .previous {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        align-self: center;
+        min-height: 15rem;
+    }
+
+    .P-more .previous span {
+        display: block;
+    }
+
+
+    .P-more .middleLine {
+        display: block;
+        background-color: #979797;
+        min-height: 15rem;
+        grid-column: 2 / 3;
+    }
+
+
+    .P-more .next {
+        grid-column: 3 / 5;
+        grid-row: 1 / 2;
+        align-self: center;
+        text-align: right;
+        min-height: 15rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        gap: 1rem;
+    }
+
+
+
     .P-more .previous {
         display: grid;
         grid-template-columns: 3.2rem auto;
@@ -678,6 +745,7 @@ header {
 
 
     .P-more .previous svg {
+        display: grid;
         grid-column: 1 / 2;
         grid-row: 1 / 3;
         align-self: center;
