Adding planet facts project mid save

--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -189,6 +189,10 @@ section {
         background-color: #1f1f23;
     }
 
+    .projects #planetFacts {
+        background-color: #f0f0f0;
+
+    }
     
 }
 
